syntax = "proto3";

package billing;

option go_package = "./proto;billing";

service Billing {
	// Subscribe to a tier
	rpc SubscribeTier(SubscribeTierRequest) returns (SubscribeTierResponse) {}


	rpc ReadAccount(ReadAccountRequest) returns (ReadAccountResponse) {}

	// Proxy stripe endpoints

	rpc CreateCheckoutSession(CreateCheckoutSessionRequest) returns (CreateCheckoutSessionResponse);
	rpc ListCards(ListCardsRequest) returns (ListCardsResponse);
	rpc ChargeCard(ChargeCardRequest) returns (ChargeCardResponse);
	rpc DeleteCard(DeleteCardRequest) returns (DeleteCardResponse);
	rpc ListPayments(ListPaymentsRequest) returns (ListPaymentsResponse);
	rpc GetPayment(GetPaymentRequest) returns (GetPaymentResponse);
	rpc SetupCard(SetupCardRequest) returns (SetupCardResponse);
}


message SubscribeTierRequest {
	string id = 1; // ID of the tier - free, pro, team
	string card_id = 2; // The card to charge
}

message SubscribeTierResponse {}

message Tier {
	string id = 1;
	string name = 2;
	string price = 3; // why string? Because then we can do things like $5 per / month
	string description = 4;
}


message Subscription {
	string id = 1;
	// TODO add more useful fields
}


message CreateCheckoutSessionRequest {
	int64 amount = 1;
	bool save_card = 2;
}

message CreateCheckoutSessionResponse {
	string id = 1;
}

message ListCardsRequest {
}

message ListCardsResponse {
	repeated Card cards = 1;
}

message Card {
	string id = 1;
	string last_four = 2;
	string expires = 3;
}

message ChargeCardRequest {
	string id = 1;
	int64 amount = 2;
}

message ChargeCardResponse {
	string client_secret = 1;
}

message DeleteCardRequest {
	string id = 1;
}

message DeleteCardResponse {}

message ListPaymentsRequest {}

message Payment {
	string id = 1;
	int64 amount = 2;
	string currency = 3;
	int64 date = 4;
	string receipt_url = 5;
}

message ListPaymentsResponse {
	repeated Payment payments = 1;
}

message GetPaymentRequest {
	string id = 1;
}

message GetPaymentResponse {
	Payment payment = 1;
}

// Read an account either by account ID or admin ID
message ReadAccountRequest {
	string id = 1;
	string admin_id = 2;
}

message ReadAccountResponse {
	BillingAccount billing_account = 1;
}

message BillingAccount {
	string id = 1;
	repeated string admins = 2;
	repeated string members = 3;
	repeated Subscription subscriptions = 4;
}

message SetupCardRequest {}

message SetupCardResponse {
	string client_secret = 1;
}
